# kde-wallpapers

./: Makefile  README.md  kde-wallpapers.spec
src/: CMakeLists.txt
src/Ariya/: metadata.desktop
src/Auros/: metadata.desktop
src/Autumn/: metadata.desktop
src/Azul/: metadata.desktop
src/Blue_Wood/: metadata.desktop
src/Castilla_Sky/: metadata.desktop
src/Elarun/: metadata.desktop
src/Flores/: metadata.desktop
src/Flying_Field/: metadata.desktop
src/Fog_on_the_West_Lake/: metadata.desktop
src/Grass/: metadata.desktop
src/Hanami/: metadata.desktop
src/Horos/: metadata.desktop
src/Media_Life/: metadata.desktop
src/Prato/: metadata.desktop
